--- a/07-Timeseries.ipynb
+++ b/07-Timeseries.ipynb
@@ -967,7 +967,7 @@
     }
    ],
    "source": [
-    "pd.isnull(idx).sum()  # 25 bad values"
+    "pd.isna(idx).sum()  # 25 bad values"
    ]
   },
   {
