--- a/06-Performance.ipynb
+++ b/06-Performance.ipynb
@@ -101,7 +101,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "606 µs ± 6.69 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "627 µs ± 16.4 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -118,7 +118,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "73 µs ± 419 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+      "75.5 µs ± 478 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
      ]
     }
    ],
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
        "numpy.float64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
        "int"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
        "array([  1.,   2.,   3.,  nan])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
        "DatetimeIndex(['2016-01-01', '2016-02-01', '2016-03-01'], dtype='datetime64[ns]', freq=None)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
        "TimedeltaIndex(['01:00:00', '00:00:30', NaT], dtype='timedelta64[ns]', freq=None)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
        "TimedeltaIndex(['00:10:00', '00:20:00', '00:30:00'], dtype='timedelta64[ns]', freq=None)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
        "Categories (3, object): [a < b < c]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +394,7 @@
        "Categories (4, object): [a, b, c, d]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-16-0b47dac51aba>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'f'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-15-0b47dac51aba>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'f'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;32m~/miniconda3/envs/ph2t/lib/python3.6/site-packages/pandas/core/categorical.py\u001b[0m in \u001b[0;36m__setitem__\u001b[0;34m(self, key, value)\u001b[0m\n\u001b[1;32m   1868\u001b[0m         \u001b[0;31m# something to np.nan\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1869\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mto_add\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0misna\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mto_add\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1870\u001b[0;31m             raise ValueError(\"Cannot setitem on a Categorical with a new \"\n\u001b[0m\u001b[1;32m   1871\u001b[0m                              \"category, set the categories first\")\n\u001b[1;32m   1872\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mValueError\u001b[0m: Cannot setitem on a Categorical with a new category, set the categories first"
      ]
@@ -445,17 +445,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "16.37 GB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "N = 321_000_000\n",
     "bytes_per = sys.getsizeof(\"AL\")  # two characters per state\n",
@@ -476,17 +468,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.64 bytes\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "character_bytes = 50 * sys.getsizeof(\"CA\")\n",
     "bytes_per_person = 2  # np.int16 = 2 bytes\n",
@@ -504,27 +488,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['a', 'b', 'c', 'd'], dtype='object')"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "c.categories"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +506,7 @@
        "array([0, 1, 2, 0], dtype=int8)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +527,7 @@
        "Categories (4, object): [a, b, c, d]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +559,7 @@
        "Categories (4, object): [a, b, c, d]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -628,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,25 +627,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('v', 'c', 6),\n",
-       " ('S', 'C', 4),\n",
-       " ('k', 'N', 7),\n",
-       " ('H', 'X', 4),\n",
-       " ('o', 'X', 6),\n",
-       " ('d', 'a', 7),\n",
-       " ('p', 'v', 6),\n",
-       " ('o', 'P', 9),\n",
-       " ('j', 'f', 8),\n",
-       " ('d', 'L', 9)]"
+       "[('I', 'N', 5),\n",
+       " ('P', 'I', 8),\n",
+       " ('f', 'r', 2),\n",
+       " ('b', 'Z', 2),\n",
+       " ('q', 'G', 4),\n",
+       " ('D', 'Q', 9),\n",
+       " ('F', 'A', 4),\n",
+       " ('c', 'B', 9),\n",
+       " ('m', 'u', 0),\n",
+       " ('w', 'L', 1)]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -715,33 +688,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>v</td>\n",
-       "      <td>c</td>\n",
-       "      <td>6</td>\n",
+       "      <td>I</td>\n",
+       "      <td>N</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>S</td>\n",
-       "      <td>C</td>\n",
-       "      <td>4</td>\n",
+       "      <td>P</td>\n",
+       "      <td>I</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>k</td>\n",
-       "      <td>N</td>\n",
-       "      <td>7</td>\n",
+       "      <td>f</td>\n",
+       "      <td>r</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>H</td>\n",
-       "      <td>X</td>\n",
-       "      <td>4</td>\n",
+       "      <td>b</td>\n",
+       "      <td>Z</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>o</td>\n",
-       "      <td>X</td>\n",
-       "      <td>6</td>\n",
+       "      <td>q</td>\n",
+       "      <td>G</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -751,33 +724,33 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>45</th>\n",
-       "      <td>O</td>\n",
-       "      <td>e</td>\n",
-       "      <td>1</td>\n",
+       "      <td>J</td>\n",
+       "      <td>b</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>46</th>\n",
-       "      <td>x</td>\n",
-       "      <td>z</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>47</th>\n",
-       "      <td>L</td>\n",
-       "      <td>J</td>\n",
+       "      <td>B</td>\n",
+       "      <td>F</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>O</td>\n",
+       "      <td>Z</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>48</th>\n",
-       "      <td>G</td>\n",
-       "      <td>E</td>\n",
+       "      <td>b</td>\n",
+       "      <td>i</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>49</th>\n",
-       "      <td>k</td>\n",
-       "      <td>o</td>\n",
-       "      <td>0</td>\n",
+       "      <td>X</td>\n",
+       "      <td>X</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -786,22 +759,22 @@
       ],
       "text/plain": [
        "    A  B  C\n",
-       "0   v  c  6\n",
-       "1   S  C  4\n",
-       "2   k  N  7\n",
-       "3   H  X  4\n",
-       "4   o  X  6\n",
+       "0   I  N  5\n",
+       "1   P  I  8\n",
+       "2   f  r  2\n",
+       "3   b  Z  2\n",
+       "4   q  G  4\n",
        ".. .. .. ..\n",
-       "45  O  e  1\n",
-       "46  x  z  4\n",
-       "47  L  J  0\n",
-       "48  G  E  1\n",
-       "49  k  o  0\n",
+       "45  J  b  6\n",
+       "46  B  F  0\n",
+       "47  O  Z  9\n",
+       "48  b  i  1\n",
+       "49  X  X  1\n",
        "\n",
        "[50 rows x 3 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -819,14 +792,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "106 ms ± 534 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "107 ms ± 1.91 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -1007,7 +980,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        14.0\n",
+       "1        -3.0\n",
+       "2         2.0\n",
+       "3        -8.0\n",
+       "4         2.0\n",
+       "         ... \n",
+       "20812    -4.0\n",
+       "20813   -10.0\n",
+       "20814    -6.0\n",
+       "20815     7.0\n",
+       "20816   -12.0\n",
+       "Name: dep_delay, Length: 20817, dtype: float64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1021,15 +1023,14 @@
        "Name: dep_delay, dtype: float64"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# read in dep_delay column from flights\n",
-    "df = pd.read_csv(\"data/ny-flights.csv.gz\", usecols=['dep_delay'])\n",
-    "delays = df['dep_delay']\n",
+    "delays = pd.read_parquet('data/ny-flights.parq')['dep_delay']\n",
     "delays.head()"
    ]
   },
@@ -1037,21 +1038,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "That `read_csv` call unintentionally demonstrates my point. We're only going to use `dep_delay` for this example, so we pass the `usecols` parameter. This means we don't have to do any parsing or type inference on the rest of the columns, since we aren't going to use them.\n",
-    "\n",
-    "For the real example though, suppose we wanted to find the 5 longest delays. One option is to sort the entire Series and then take the head"
+    "Suppose we wanted to find the 5 longest delays. One option is to sort the entire Series and then take the head"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.3 ms ± 16.3 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "1.31 ms ± 24.8 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -1068,14 +1067,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "739 µs ± 6.62 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "750 µs ± 18.2 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -1114,10 +1113,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Step 1: read in `data/flights_coord.csv`. Call the DataFrame coord\n",
@@ -1126,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1224,7 +1221,7 @@
        "4  57.745278 -152.882778  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1242,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1251,7 +1248,7 @@
        "False"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1269,7 +1266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1342,7 +1339,7 @@
        "06A     -152.882778  57.745278"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1405,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1420,7 +1417,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
