--- a/03-Iterators-Groupby.ipynb
+++ b/03-Iterators-Groupby.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1156,7 +1156,9 @@
     "We can use `top_reviewers` as a boolean mask, just like in regular pandas.\n",
     "\n",
     "```python\n",
-    ">>> df[df.profile_name.isin(top_reviewers.compute())].to_parquet(\"data/subset.parq\")\n",
+    ">>> df[df.profile_name.isin(top_reviewers.compute())].to_parquet(\n",
+    "    \"data/subset.parq\", compression='gzip'\n",
+    ")\n",
     "```"
    ]
   },
@@ -1172,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1181,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
