--- a/05-Tidy-Data.ipynb
+++ b/05-Tidy-Data.ipynb
@@ -977,9 +977,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "team            home_or_away\n",
+       "Atlanta Hawks   away_team       0.512195\n",
+       "                home_team       0.658537\n",
+       "Boston Celtics  away_team       0.487805\n",
+       "                home_team       0.682927\n",
+       "Brooklyn Nets   away_team       0.170732\n",
+       "Name: won, dtype: float64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%load solutions/tidy_00.py"
    ]
